--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -1,21 +1,49 @@
 /*XX-Large devices (larger desktops, 1400px and up) */
 @media (max-width: 1400px) {
-  nav,
-  header,
   main,
-  .footer-container {
-    padding: 20px 50px;
+  .nav-container,
+  .footer-container,
+  .header-container {
+    padding: 10px 80px;
+  }
+  .nav-container {
   }
 }
 /* X-Large devices (large desktops, 1200px and up) */
 @media (max-width: 1200px) {
+  header {
+    background-size: 63% 86%;
+  }
+  .header-title + .text-gradient {
+    font-size: 82px;
+    font-weight: 800;
+  }
 }
 /* Large devices (desktops, 992px and up) */
 @media (max-width: 992px) {
+  .header-container {
+    flex-direction: column-reverse;
+  }
+  .nav-container {
+    flex-direction: column;
+    gap: 20px;
+  }
+  .header-content-container {
+    margin-top: 5rem;
+  }
+  header {
+    background-size: 39rem 28rem;
+    background-position: bottom center;
+    height: auto;
+  }
+  .header-img {
+    margin-top: 1rem;
+    width: 80%;
+  }
 }
 /* Medium devices (tablets, 768px and up) */
-@media (max-width: 768px) {
-  nav {
+@media screen and (max-width: 768px) {
+  .nav-container {
     flex-direction: column;
     gap: 20px;
   }
@@ -24,19 +52,49 @@
 }
 /* Small devices (landscape phones, 576px and up) */
 @media (max-width: 576px) {
-  nav {
+  .nav-container {
     padding: 1rem;
   }
-  nav,
+  .nav-container,
   nav ul {
     flex-direction: column;
     align-items: center !important;
     gap: 20px;
+  }
+  header {
+    background-size: 30rem 24rem;
   }
   nav li {
     margin-left: 0 !important;
   }
   .follow-us-container {
     margin-left: 0 !important;
+  }
+  .dot {
+    width: 10px;
+    height: 10px;
+  }
+  .header-title {
+    font-size: 9vw;
+  }
+  .header-title + .text-gradient {
+    font-size: 12vw;
+  }
+  .header-img {
+    width: 100%;
+  }
+
+  .btn {
+    border-radius: 48px;
+    background: var(--linear, linear-gradient(90deg, #ff42a5 0%, #ff42a5 100%));
+    border: 0;
+    border-radius: 40px;
+    padding: 10px 20px;
+    color: #fff;
+    font-size: 15px;
+    font-weight: 600;
+  }
+  .go-rougue {
+    margin-left: 5px;
   }
 }
