--- a/styles/shared-style.css
+++ b/styles/shared-style.css
@@ -14,12 +14,21 @@
 body {
   font-family: 'Work Sans', sans-serif;
 }
-nav,
-header,
+img {
+  width: 100%;
+}
+.nav-container,
+.header-container,
 main,
 .footer-container {
   max-width: 1400px;
   margin: auto;
+}
+main,
+.nav-container,
+.footer-container,
+.header-container {
+  padding: 10px 80px;
 }
 .text-primary {
   color: var(--primary-color);
@@ -39,8 +48,8 @@ main,
   border-radius: 48px;
   background: var(--linear, linear-gradient(90deg, #ff42a5 0%, #ff42a5 100%));
   border: 0;
-  border-radius: 20px;
-  padding: 21px 40px;
+  border-radius: 40px;
+  padding: 16px 40px;
   color: #fff;
   font-size: 20px;
   font-weight: 600;
