--- a/styles/shared-style.css
+++ b/styles/shared-style.css
@@ -20,6 +20,7 @@ img {
 .nav-container,
 .header-container,
 main,
+.gamer-container,
 .footer-container {
   max-width: 1400px;
   margin: auto;
@@ -27,6 +28,7 @@ main,
 main,
 .nav-container,
 .footer-container,
+.gamer-container,
 .header-container {
   padding: 10px 80px;
 }
@@ -59,6 +61,7 @@ main,
   color: #0b0223;
   font-size: 48px;
   font-weight: 700;
+  margin-bottom: 1rem;
 }
 .text-gray-18 {
   color: #534c64;
