--- a/styles/style.css
+++ b/styles/style.css
@@ -84,3 +84,191 @@ header {
   background: #4ec5f7;
   margin-left: 24px;
 }
+/* we are gamer section */
+.we-are-gamer {
+  gap: 50px;
+  background: linear-gradient(
+    90deg,
+    rgba(255, 66, 165, 0.03) 0%,
+    rgba(255, 66, 165, 0.03) 100%
+  );
+}
+.gamer-img {
+  /* flex-basis: 50%; */
+}
+.gamer-content {
+  max-width: 634px;
+  text-align: right;
+}
+.gamer-content .text-gray-18 {
+  margin: 20px 0;
+}
+.our-purpose {
+  color: #534c64;
+  font-size: 20px;
+  font-weight: 500;
+  margin-top: 20px;
+}
+.our-purpose span {
+  color: #534c64;
+  font-size: 28px;
+  font-weight: 700;
+  line-height: 45px;
+}
+/* funny video section styles */
+.funny-content-container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 24px;
+}
+.funny-video-header-content {
+  max-width: 655px;
+  margin: 100px auto 40px;
+  text-align: center;
+}
+.funny-video .section-title {
+  margin-bottom: 10px;
+}
+.play-game {
+  gap: 90px;
+  margin-top: 100px;
+}
+.badge-img {
+  max-width: 238px;
+  height: auto;
+  position: absolute;
+  bottom: -100px;
+  right: -20%;
+  z-index: 2;
+}
+.main-img {
+  max-width: 527px;
+}
+.play-game-img {
+  position: relative;
+}
+.play-game-content {
+  max-width: 483px;
+}
+.icon-section {
+  margin-top: 130px;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 30px;
+  margin-bottom: 130px;
+}
+.funny-img {
+  position: relative;
+}
+.hover-effect {
+  position: absolute;
+  width: 100%;
+  z-index: 2;
+  bottom: 0;
+  border-radius: 16px;
+  display: none;
+  visibility: hidden;
+  background: linear-gradient(
+    0deg,
+    rgba(0, 0, 0, 0.6) 0%,
+    rgba(0, 0, 0, 0.6) 100%
+  );
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 0%;
+  transition: height 0.5s, display 0.2s, visibility 0.2s;
+}
+
+.funny-img:hover .hover-effect {
+  display: block;
+  visibility: visible;
+  height: 100%;
+}
+.hover-content {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+}
+.hover-effect i {
+  font-size: 50px;
+  color: white;
+}
+.icon {
+  display: flex;
+  gap: 8px;
+  align-items: center;
+  padding: 10px;
+  border-radius: 40px;
+  box-sizing: content-box;
+  border-width: 2px;
+  border: 2px solid white;
+  transition: 0.5s;
+}
+.icon:hover {
+  border: 2px solid #ff42a5;
+}
+.icon img {
+  width: 50px;
+}
+footer {
+  background: #0b0223;
+  padding: 120px 300px;
+}
+.icon-text {
+  color: #0b0223;
+  font-size: 20px;
+  font-weight: 600;
+}
+.footer-logo-container {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  justify-content: center;
+}
+.footer-logo {
+  width: 100px;
+}
+.gamer-text {
+  font-size: 45px;
+  font-weight: 700;
+  color: white;
+}
+.gamer-text span {
+  background: linear-gradient(90deg, #ff42a5 0%, #ff42a5 100%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.footer-navigation ul {
+  list-style: none;
+  margin-top: 60px;
+}
+.footer-navigation a {
+  text-decoration: none;
+  color: white;
+}
+.social-icons-container {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 40px;
+  margin-top: 60px;
+  margin-bottom: 60px;
+}
+.terms-container ul {
+  display: flex;
+  justify-content: space-around;
+  list-style: none;
+}
+.terms-container a {
+  color: rgba(255, 255, 255, 0.6);
+  font-family: Work Sans;
+  font-size: 16px;
+  font-weight: 500;
+  text-decoration: none;
+}
