finished the asignment

--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -26,7 +26,7 @@
 }
 @media screen and (max-width: 1024px) {
   .badge-img {
-    max-width: 200px;
+    max-width: 150px;
     bottom: -68px;
   }
 }
@@ -115,7 +115,7 @@
     width: 18rem;
   }
   .terms-container ul {
-    gap: 2rem;
+    gap: 1rem;
   }
   .footer-navigation ul {
     gap: 10px;
@@ -124,6 +124,18 @@
   .footer-navigation ul li {
     margin-right: 10px;
   }
+  footer {
+    padding: 1rem 2rem;
+  }
+
+  .social-icons-container {
+    width: 16rem;
+    margin: 1.5rem auto;
+  }
+  .footer-navigation, .terms-container{
+    margin: 1.5rem auto;
+  }
+  
 }
 
 /* Small devices (landscape phones, 576px and up) */
@@ -186,13 +198,7 @@
     font-weight: 700;
     margin-bottom: 1rem;
   }
-  footer {
-    padding: 1rem 2rem;
-  }
-
-  .social-icons-container {
-    width: 18rem;
-  }
+  
 }
 
 @media screen and (min-width: 0px) and (max-width: 431px) {
