--- a/styles/style.css
+++ b/styles/style.css
@@ -186,11 +186,11 @@ header {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-
 }
 .hover-effect i {
   font-size: 50px;
   color: white;
+  margin-bottom: 1rem;
 }
 .icon {
   display: flex;
@@ -202,6 +202,12 @@ header {
   border-width: 2px;
   border: 2px solid white;
   transition: 0.5s;
+}
+.icon-text {
+  transition: color 0.5s;
+}
+.icon:hover .icon-text {
+  color: #ff42a5;
 }
 .icon:hover {
   border: 2px solid #ff42a5;
@@ -265,4 +271,9 @@ footer {
   font-size: 16px;
   font-weight: 500;
   text-decoration: none;
+}
+.copy-write {
+  color: white;
+  text-align: center;
+  margin-top: 2rem;
 }
