--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -1,6 +1,3 @@
-.hide {
-  display: none;
-}
 /*XX-Large devices (larger desktops, 1400px and up) */
 @media (max-width: 1400px) {
   main,
@@ -10,24 +7,50 @@
   .header-container {
     padding: 10px 80px;
   }
-  footer {
-    padding: 1rem 5rem;
+   header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
+  footer {
+    padding: 5rem 11rem;
+  }
+  .gamer-content {
+    width: 76%;
+  }
+ 
 }
 /* X-Large devices (large desktops, 1200px and up) */
 @media (max-width: 1200px) {
   header {
     background-size: 63% 86%;
   }
+ 
   .header-title + .text-gradient {
     font-size: 82px;
     font-weight: 800;
   }
-}
-@media screen and (max-width: 1024px) {
+  .gamer-content {
+    width: 76%;
+  }
   .badge-img {
     max-width: 150px;
     bottom: -68px;
+    right: -15%;
+  }
+}
+@media screen and (max-width: 1024px) {
+  
+  .gamer-content {
+    width: 76%;
+  }
+  .badge-img {
+    max-width: 150px;
+    bottom: -68px;
+  }
+  
+  footer{
+    padding: 5rem 3rem;
   }
 }
 /* Large devices (desktops, 992px and up) */
@@ -39,14 +62,22 @@
   .header-container {
     padding: 10px 30px;
   }
+  
   .header-container,
   .play-game {
     flex-direction: column-reverse;
+  }
+  .play-game{
+    width: 60%;
+    margin: auto;
   }
   .nav-container,
   .gamer-container {
     flex-direction: column;
     gap: 20px;
+  }
+  .header-container {
+    padding-bottom: 2rem;
   }
   .play-game {
     align-items: center;
@@ -60,11 +91,16 @@
   .gamer-container {
     margin-top: 2rem;
     margin-left: 1rem;
+    padding-bottom: 2rem;
   }
   header {
     background-size: 39rem 28rem;
     background-position: bottom center;
     height: auto;
+  }
+  .header-content {
+    margin-top: 7rem;
+    text-align: center;
   }
   .header-img {
     margin-top: 1rem;
@@ -79,19 +115,53 @@
 }
 /* Medium devices (tablets, 768px and up) */
 @media screen and (max-width: 768px) {
+  .header-img {
+    width: 29rem;
+  }
+ 
+  .gamer-container {
+    margin-top: 0rem;
+  }
+  .we-are-gamer {
+    padding: 0px;
+    margin-top: 2rem;
+  }
+  .icon-section {
+    margin-top: 100px;
+    margin-bottom: 70px;
+  }
+  footer,
+  .footer-container {
+    padding: 3rem 2rem !important;
+  }
+  .footer-navigation,
+  .terms-container {
+    width: auto !important;
+  }
+  .footer-navigation ul {
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+  .social-icons-container {
+    width: auto !important;
+  }
   .nav-container {
     flex-direction: column;
     gap: 20px;
   }
   .header-content {
     margin-top: 7rem;
+    text-align: center;
+  }
+  .header-container {
+    padding-bottom: 2rem;
   }
   .play-game {
     justify-content: center;
     align-items: center;
   }
   .funny-content-container {
-    grid-template-columns: repeat(2, 200px);
+    grid-template-columns: repeat(2, 1fr);
     justify-content: center;
   }
   .play-game {
@@ -102,11 +172,22 @@
   .main-img {
     max-width: 300px;
   }
-  .badge-img {
-    max-width: 185px;
-    left: 150px;
-    height: 200px;
+ 
+  /* icon section  */
+  .icon-section {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    justify-items: center;
   }
+  .icon img {
+    width: 30px;
+    height: 30px;
+  }
+  .icon .icon-text {
+    font-size: 10px;
+    font-weight: 400;
+  }
+  /* footer responsive */
   footer {
     padding: 1rem 15rem;
   }
@@ -127,19 +208,91 @@
   footer {
     padding: 1rem 2rem;
   }
-
-  .social-icons-container {
+  /* .social-icons-container {
     width: 16rem;
     margin: 1.5rem auto;
-  }
-  .footer-navigation, .terms-container{
+  } */
+  .footer-navigation,
+  .terms-container {
     margin: 1.5rem auto;
   }
-  
 }
 
 /* Small devices (landscape phones, 576px and up) */
 @media (max-width: 576px) {
+  .footer-navigation,
+  .terms-container {
+    margin: 1rem auto;
+  }
+  footer {
+    padding: 3rem 0;
+  }
+  .social-icon-item svg {
+    width: 40px;
+  }
+  .footer-logo {
+    margin-right: 0px !important;
+  }
+  .social-icons-container, .footer-navigation ul {
+    gap: 33px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    justify-content: center;
+    justify-items: center;
+  }
+  .footer-navigation ul{
+    gap: 10px;
+  }
+  .footer-navigation a,
+  .terms-container a {
+    font-size: 14px;
+  }
+  .footer-navigation ul {
+    margin-top: 30px;
+  }
+  .terms-container ul {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 2rem;
+    justify-content: center;
+    justify-items: center;
+  }
+  .copy-write {
+    margin-top: 60px;
+  }
+  .badge-img {
+    max-width: 100px;
+    bottom: -30px;
+    height: auto;
+  }
+  .icon-section {
+    margin-bottom: 60px;
+  }
+  /* shared styles */
+  .text-gray-18 {
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 25px; /* 166.667% */
+  }
+  .our-purpose {
+    font-size: 15px;
+    font-weight: 500;
+    margin-top: 20px;
+  }
+  .our-purpose span {
+    font-size: 18px;
+    line-height: 30px;
+  }
+  /* nav related styles */
+  .logo-container img,
+  .footer-logo-container img {
+    margin-right: 1rem;
+    max-width: 60px;
+  }
+  .logo-container p,
+  .footer-logo-container p {
+    font-size: 35px;
+  }
   .nav-container {
     padding: 1rem;
   }
@@ -149,18 +302,35 @@
     align-items: center !important;
     gap: 20px;
   }
-  header {
-    background-size: 30rem 20rem;
-  }
   nav li {
     margin-left: 0 !important;
   }
   .follow-us-container {
     margin-left: 0 !important;
   }
+  /* header related styles */
+  header {
+    background: none;
+  }
+  .header-content {
+    background-image: url('../images/Group\ 14.png');
+    background-repeat: no-repeat;
+    background-size: 31rem 31rem;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+  }
+  .header-content {
+    margin-top: 4rem;
+  }
+  .header-container {
+    padding-bottom: 2rem;
+  }
   .dot {
     width: 10px;
     height: 10px;
+  }
+  .description-content {
+    margin: 18px;
   }
   .header-title {
     font-size: 9vw;
@@ -171,41 +341,48 @@
   .header-img {
     width: 100%;
   }
-
   .btn {
-    border-radius: 48px;
-    background: var(--linear, linear-gradient(90deg, #ff42a5 0%, #ff42a5 100%));
-    border: 0;
     border-radius: 40px;
     padding: 10px 20px;
-    color: #fff;
     font-size: 15px;
-    font-weight: 600;
+  }
+  .we-are-gamer {
+    padding: 0;
   }
   .go-rougue {
     margin-left: 5px;
-  }
-  .description-content {
-    margin: 18px 0px;
   }
   .funny-content-container {
     grid-template-columns: repeat(1, 300px);
     align-content: center;
   }
+  .play-game {
+    justify-content: start !important;
+  }
+  .funny-video {
+    padding-bottom: 2rem;
+  }
+  .funny-content-items {
+    text-align: center;
+  }
+  .funny-video-header-content {
+    margin-top: 66px !important;
+  }
+
   .section-title {
-    color: #0b0223;
     font-size: 30px;
-    font-weight: 700;
     margin-bottom: 1rem;
   }
-  
 }
 
-@media screen and (min-width: 0px) and (max-width: 431px) {
+@media screen and (min-width: 0px) and (max-width: 320px) {
   .header-title {
     font-size: 8vw !important;
   }
   .header-title + .text-gradient {
     font-size: 8vw;
+  }
+  .icon-section{
+    grid-template-columns: repeat(2, 1fr);
   }
 }
